@@ -1,0 +1,165 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!-- 
+Aeotec ZW122 Water Sensor 6
+http://products.z-wavealliance.org/products/2437
+-->
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+	<!-- Configuration Parameters -->
+	<CommandClass id="112">
+		<Value type="list" genre="config" instance="1" index="2" label="Waking up for 10 minutes when re-power on" min="0" max="1" size="1" value="0">
+			<Help>Enable/Disable waking up for 10 minutes when re-power on (battery mode) the Water Sensor.</Help>
+			<Item label="Disabled" value="0"/>
+			<Item label="Enabled" value="1"/>
+		</Value>
+		<Value type="byte" genre="config" instance="1" index="8" label="Timeout of awake after the Wake Up CC is sent out" min="8" max="127" units="seconds" value="8" size="1">
+			<Help>
+				Set the timeout of awake after the Wake Up CC is sent out.
+				Available rang is 8 to 127 seconds.
+			</Help>
+		</Value>
+		<Value type="list" genre="config" instance="1" index="9" label="Current power mode" min="0" max="255" size="1" value="0" read_only="true">
+			<Help>Report the current power mode and the product state for battery power mode</Help>
+			<Item label="USB power mode" value="0"/>
+			<Item label="Keep awake for 10 minutes for battery power mode" value="256"/>
+			<Item label="Keep sleep state for Battery power mode" value="255"/>
+		</Value>
+		<Value type="int" genre="config" instance="1" index="10" label="Alarm time for the Buzzer" min="0" max="1" value="0" size="4">
+			<Help>
+				Set the alarm time for the Buzzer when the sensor is triggered.
+				1 to 255 Repeated cycle of Buzzer alarm.
+				256 to 65535 the time of Buzzer keeping ON state (MSB).
+				65536 to 2147483647 The time of Buzzer keeping OFF state.
+			</Help>
+		</Value>
+		<Value type="byte" genre="config" instance="1" index="39" label="Set the low battery value" min="10" max="50" value="20" size="1">
+			<Help>10% to 50%</Help>
+		</Value>
+		<Value type="list" genre="config" instance="1" index="48" label="Sensor report" min="0" max="1" size="1" value="0">
+			<Help>Enable/disable the sensor report</Help>
+			<Item label="Disabled" value="0"/>
+			<Item label="Enabled" value="1"/>
+		</Value>
+		<Value type="int" genre="config" instance="1" index="49" label="Upper limit value" size="4" min="0" max="2147483647" value="0">
+			<Help>
+				Set the upper limit value (overheat).
+				0 Celsius unit
+				1 Fahrenheit unit
+				65536 to 2147483647 Temperature value
+			</Help>
+		</Value>
+		<Value type="int" genre="config" instance="1" index="50" label="Lower limit value" size="4" min="0" max="2147483647" value="0">
+			<Help>
+				Set the lower limit value (under heat).
+				0 Celsius unit
+				1 Fahrenheit unit
+				65536 to 2147483647 Temperature value
+			</Help>
+		</Value>
+		<Value type="byte" genre="config" instance="1" index="57" label="Recover limit value of temperature sensor" min="10" max="255" value="10" size="1">
+			<Help>
+				Set the recover limit value of temperature sensor.
+				10 to 255 => 1.0C to 25.5C
+			</Help>
+		</Value>
+		<Value type="list" genre="config" instance="1" index="64" label="Unit of the automatic temperature report" min="0" max="1" size="1" value="0">
+			<Help>Set the default unit of the automatic temperature report in parameter 101-103</Help>
+			<Item label="Celsius" value="0"/>
+			<Item label="Fahrenheit" value="1"/>
+		</Value>
+		<Value type="list" genre="config" instance="1" index="84" label="Get the state of tilt sensor" min="0" max="1" size="1" value="0" read_only="true">
+			<Help>Get the state of tilt sensor</Help>
+			<Item label="Horizontal" value="0"/>
+			<Item label="Vertical" value="1"/>
+		</Value>
+		<Value type="list" genre="config" instance="1" index="86" label="Buzzer" min="0" max="1" size="1" value="1">
+			<Help>Enable/ disable the buzzer.</Help>
+			<Item label="Disabled" value="0"/>
+			<Item label="Enabled" value="1"/>
+		</Value>
+		<Value type="int" genre="config" instance="1" index="87" label="Sensor is triggered the buzzer will alarm" size="4" min="0" max="2147483647" value="86640">
+			<Help>
+				To set which sensor is triggered the buzzer will alarm.
+				1 If the Water leak is triggered, the buzzer will alarm.
+				2 If the vibration is triggered, the buzzer will alarm.
+				4 If the tilt sensor is triggered, the buzzer will alarm.
+				16 If the under heat is triggered, the buzzer will alarm.
+				32 If the overheat is triggered, the buzzer will alarm.
+			</Help>
+		</Value>
+		<Value type="list" genre="config" instance="1" index="88" label="Probe 1 Basic Set on grp 3" min="0" max="2" size="1" value="1">
+			<Help>To set which value of the Basic Set will be sent to the associated nodes in association Group 3 when the Sensor probe 1 is triggered.</Help>
+			<Item label="Send nothing" value="0"/>
+			<Item label="Presence/absence of water 0xFF/0x00" value="1"/>
+			<Item label="Presence/absence of water 0x00/0xFF" value="2"/>
+		</Value>
+		<Value type="list" genre="config" instance="1" index="89" label="Probe 2 Basic Set on grp 4" min="0" max="2" size="1" value="1">
+			<Help>To set which value of the Basic Set will be sent to the associated nodes in association Group 4 when the Sensor probe 2 is triggered.</Help>
+			<Item label="Send nothing" value="0"/>
+			<Item label="Presence/absence of water 0xFF/0x00" value="1"/>
+			<Item label="Presence/absence of water 0x00/0xFF" value="2"/>
+		</Value>
+		<Value type="list" genre="config" instance="1" index="94" label="Battery report selection" min="0" max="1" size="1" value="1">
+			<Help>To set which power source level is reported via the Battery CC.</Help>
+			<Item label="USB power level" value="0"/>
+			<Item label="CR123A battery level" value="1"/>
+		</Value>
+		<Value type="list" genre="config" instance="1" index="101" label="Unsolicited report" size="1" min="0" max="3" value="3">
+			<Help>
+				To set what unsolicited report would be sent to the Lifeline group.
+			</Help>
+			<Item label="Send Nothing" value="0"/>
+			<Item label="Battery Report" value="1"/>
+			<Item label="Multilevel sensor report for temperature" value="2"/>
+			<Item label="Battery Report and Multilevel sensor report for temperature" value="3"/>
+		</Value>
+		<Value type="list" genre="config" instance="1" index="111" label="Unsolicited report interval time" size="4" min="5" max="2678400" units="seconds" value="5">
+			<Help>
+				To set the interval time of sending reports in Report group 1
+			</Help>
+		</Value>
+		<Value type="list" genre="config" instance="1" index="135" label="Water leak event report selection" min="0" max="3" size="1" value="0">
+			<Help>To set which sensor report can be sent when the water leak event is triggered and if the receiving device is a non-multichannel device.</Help>
+			<Item label="Send nothing" value="0"/>
+			<Item label="Send notification report to association group 1" value="1"/>
+			<Item label="Send configuration 0x88 report to association group 2" value="2"/>
+			<Item label="Send notification report to association group 1 and Send configuration 0x88 report to association group 2" value="3"/>
+		</Value>
+		<Value type="list" genre="config" instance="1" index="136" label="Report Type to Send" size="1" min="0" max="2" value="0">
+			<Help>
+				When the parameter 0x87 is set to 2 or 3, it can get the sensor probes status through this configuration value.
+			</Help>
+			<Item label="Absence of water is triggered by probe 1" value="0"/>
+			<Item label="Presence of water is triggered by probe 1" value="1"/>
+			<Item label="Presence of water is triggered by probe 2" value="2"/>
+		</Value>
+		<Value type="short" genre="config" instance="1" index="201" label="Temperature sensor calibration" size="2" min="0" max="255" value="0">
+			<Help>
+				-128 to 127
+				Available rang is -12.8C to 12.7C.
+			</Help>
+		</Value>
+		<Value type="list" genre="config" index="252" label="Lock/Unlock Configuration" min="0" max="1" size="1" value="0">
+			<Help>Lock/ unlock all configuration parameters</Help>
+			<Item label="Unlock" value="0"/>
+			<Item label="Lock" value="1"/>
+		</Value>
+		<Value type="list" index="255" genre="config" label="Reset To Factory Defaults" size="4" value="1" write_only="true">
+			<Help>Reset to factory defaults</Help>
+			<Item label="Normal" value="0"/>
+			<Item label="Reset to factory default setting" value="1"/>
+			<Item label="Reset to factory default setting and removed from the z-wave network" value="1431655765"/>
+		</Value>
+	</CommandClass>
+	<!-- Basic set as report-->
+	<CommandClass id="32" setasreport="true"/>
+	<!-- Association Groups -->
+	<CommandClass id="133">
+		<Associations num_groups="4">
+			<Group index="1" max_associations="5" label="Lifeline"/>
+			<Group index="2" max_associations="5" label="Send the configuration parameter 0x88"/>
+			<Group index="3" max_associations="5" label="Send Basic Set when the Sensor probe 1 is triggered"/>
+			<Group index="4" max_associations="5" label="Send Basic Set when the Sensor probe 2 is triggered"/>
+		</Associations>
+	</CommandClass>
+
+</Product>
