@@ -185,6 +185,7 @@ Version 1.5
  - Add Hank HKZW-DWS01 Door/Window Sensor (Nechry)
  - Add Hank HKZW-MS01 Multisensor (Nechry)
  - Add MCOHome MH9-CO2-WD CO2 Monitor (Nechry)
+ - Add Aeotec ZW122 Water Sensor 6 (Nechry)
  
 Version 1.4
  - Released 10th Jan, 2016
